--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ Copyright
 -->
 
 <head>
-	<title>asdf</title>
+	<title>A Very Respectful Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,11 +18,11 @@ Copyright
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			I am not sure what content will come here
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Some other company 2014</p>
 	</footer>
 </body>
 </html>
